ajuste em erro de cros
